--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body {
 
 body {
   display: flex;
+  min-height: 100vh;
   flex-wrap: wrap;
   flex-direction: row-reverse;
   justify-content: flex-end;
