--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
 
+  <script data-goatcounter="https://denilsonsa.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
   {% seo %}
 </head>
 <body>
