--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ body {
 
 main {
   flex: 8 0 30em;
-  padding: 1em;
+  margin: 1em;
+  max-width: calc(100vw - 2em);
 }
 main pre {
-  max-width: calc(100vw - 2rem);  /* Minus the "main" padding, minus some extra for the scrollbar. */
+  max-width: 100%;
   overflow-x: auto;
 }
 main > h1:first-child,
@@ -84,8 +85,7 @@ svg.fill-from-color {
 
 img.drawing {
   display: block;
-  max-width: 100vw;
-  max-width: calc(100vw - 3rem);  /* Minus the "main" padding, minus some extra for the scrollbar. */
+  max-width: 100%;
   max-height: 100vh;
   width: 100%;
 }
